[project]
name = "stockgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "langchain-openai>=0.3.6",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "yfinance>=0.2.53",
]